refactor(docs): reorganize project documentation structure
Move documentation files to categorized directories (docs/, reports/, archive/)
Update README.md with new documentation paths
Add archive README and changelog files
Extend .gitignore with additional patterns for temporary files

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,81 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Archive and temporary files
+archive/*.zip
+archive/*.tar.gz
+archive/*.rar
+*.tmp
+*.temp
+*.bak
+*.backup
+
+# Documentation drafts and temporary files
+docs/**/*.tmp
+reports/**/*.tmp
+*.draft.md
+*.wip.md
+
+# OS generated files
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+
+# Coverage directory used by tools like istanbul
+coverage/
+*.lcov
+
+# nyc test coverage
+.nyc_output
+
+# Dependency directories
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Microbundle cache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+.parcel-cache
+
+# Next.js build output
+.next
+
+# Nuxt.js build / generate output
+.nuxt
+dist
+
+# Storybook build outputs
+.out
+.storybook-out
+
+# Temporary folders
+tmp/
+temp/
