--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@rollup/rollup-win32-x64-msvc": "^4.52.3",
     "@supabase/supabase-js": "^2.58.0",
+    "@swc/core-win32-x64-msvc": "^1.13.20",
     "@tanstack/react-query": "^5.90.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
