--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@supabase/supabase-js": "^2.58.0",
     "@swc/core-win32-x64-msvc": "^1.13.20",
     "@tanstack/react-query": "^5.90.2",
+    "@types/react-window": "^1.8.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -57,6 +58,8 @@
     "react-hook-form": "^7.61.1",
     "react-resizable-panels": "^2.1.9",
     "react-router-dom": "^6.30.1",
+    "react-window": "^2.2.0",
+    "react-window-infinite-loader": "^2.0.0",
     "recharts": "^2.15.4",
     "rollup": "^4.52.3",
     "sonner": "^1.7.4",
