--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
+    "supabase:test": "cd supabase/functions && deno task test",
     "preview": "vite preview"
   },
   "dependencies": {
