--- a/supabase/functions/deno.json
+++ b/supabase/functions/deno.json
@@ -22,5 +22,8 @@
     "singleQuote": false,
     "proseWrap": "preserve"
   },
+  "tasks": {
+    "test": "deno test --allow-env --allow-net --allow-read --import-map=./import_map.json tests"
+  },
   "importMap": "./import_map.json"
 }
