--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -12,6 +12,12 @@ verify_jwt = true
 [functions.generate-suno]
 verify_jwt = true
 
+[functions.sync-lyrics-job]
+verify_jwt = true
+
+[functions.lyrics-callback]
+verify_jwt = false
+
 [functions.suno-callback]
 verify_jwt = false
 
