--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "db:seed": "tsx supabase/seed/index.ts"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
@@ -98,6 +99,7 @@
     "typescript-eslint": "^8.38.0",
     "vite": "^5.4.19",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest-dom": "^0.1.1"
+    "vitest-dom": "^0.1.1",
+    "tsx": "^4.19.2"
   }
 }
