--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,9 @@ jobs:
       - name: Lint
         run: npm run lint
 
+      - name: Validate docs & logs
+        run: npm run docs:validate
+
       - name: Typecheck
         run: npx tsc --noEmit
 
