--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,18 @@ VITE_SUPABASE_URL="https://your_project_id.supabase.co"
 
 # Дополнительные переменные окружения
 # Добавьте здесь другие необходимые переменные
+
+# Sentry Configuration
+VITE_SENTRY_DSN=""
+VITE_SENTRY_ENVIRONMENT="development"
+VITE_SENTRY_RELEASE="local"
+VITE_SENTRY_TRACES_SAMPLE_RATE="0.1"
+
+# Sentry CLI / Supabase Edge Function settings
+SENTRY_DSN=""
+SENTRY_ENVIRONMENT="development"
+SENTRY_RELEASE="local"
+SENTRY_TRACES_SAMPLE_RATE="0.0"
+SENTRY_AUTH_TOKEN=""
+SENTRY_ORG=""
+SENTRY_PROJECT=""
