--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test:e2e": "playwright test",
+    "db:seed": "supabase db reset --env-file supabase/.env --force"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
@@ -85,6 +87,7 @@
     "@types/react-window": "^1.8.8",
     "@vitejs/plugin-react-swc": "^3.11.0",
     "@vitest/coverage-v8": "^3.2.4",
+    "@playwright/test": "^1.49.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.32.0",
     "eslint-plugin-react-hooks": "^5.2.0",
@@ -98,6 +101,7 @@
     "typescript-eslint": "^8.38.0",
     "vite": "^5.4.19",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest-dom": "^0.1.1"
+    "vitest-dom": "^0.1.1",
+    "playwright": "^1.49.0"
   }
 }
