--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite --host 127.0.0.1",
     "build": "vite build",
     "build:dev": "vite build --mode development",
+    "bundle:check": "node scripts/performance/check-bundle-size.mjs",
     "lint": "eslint .",
     "docs:validate": "tsx scripts/docs/validate.ts",
     "preview": "vite preview",
@@ -77,6 +78,7 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
     "vitest": "^3.2.4",
+    "web-vitals": "^3.5.2",
     "zod": "^3.25.76"
   },
   "devDependencies": {
@@ -106,7 +108,6 @@
     "typescript-eslint": "^8.38.0",
     "vite": "^5.4.19",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest-dom": "^0.1.1",
-    "tsx": "^4.19.2"
+    "vitest-dom": "^0.1.1"
   }
 }
