--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
+    "@playwright/test": "^1.49.0",
     "@sentry/cli": "^2.56.0",
     "@sentry/vite-plugin": "^4.3.0",
     "@tailwindcss/typography": "^0.5.16",
@@ -94,7 +95,6 @@
     "@types/react-window": "^1.8.8",
     "@vitejs/plugin-react-swc": "^3.11.0",
     "@vitest/coverage-v8": "^3.2.4",
-    "@playwright/test": "^1.49.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.32.0",
     "eslint-plugin-markdown": "^5.1.0",
@@ -102,6 +102,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^15.15.0",
     "lovable-tagger": "^1.1.10",
+    "playwright": "^1.49.0",
     "postcss": "^8.5.6",
     "supabase": "^2.48.3",
     "tailwindcss": "^3.4.17",
@@ -110,7 +111,6 @@
     "typescript-eslint": "^8.38.0",
     "vite": "^5.4.19",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest-dom": "^0.1.1",
-    "playwright": "^1.49.0"
+    "vitest-dom": "^0.1.1"
   }
 }
