--- a/package.json
+++ b/package.json
@@ -80,7 +80,8 @@
     "vaul": "^0.9.9",
     "vitest": "^3.2.4",
     "web-vitals": "^3.5.2",
-    "zod": "^3.25.76"
+    "zod": "^3.25.76",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
