feat(logging): add log-error function for client-side error tracking
Add new serverless function to handle client-side error logging with Sentry integration. The function validates and processes error payloads with context information including user agent, IP, and environment details.

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -53,3 +53,6 @@ verify_jwt = true
     SENTRY_ENVIRONMENT = "development"
     SENTRY_RELEASE = "local"
     SENTRY_TRACES_SAMPLE_RATE = "0.0"
+
+[functions.log-error]
+verify_jwt = false
